syntax = "proto3";

package shortener;

option go_package = "github.com/llravell/go-shortener/proto";

message URL {
  string original = 1;
  string shorten = 2;
}

message ShortenURLRequest {
  string url = 1;
}

message ShortenURLResponse {
  string result = 1;
}

message ShortenURLsRequest {
  repeated string urls = 1;
}

message ShortenURLsResponse {
  repeated URL results = 1;
}

message ResolveURLRequest {
  string url = 1;
}

message ResolveURLResponse {
  string result = 1;
}

service Shortener {
  rpc ShortenURL(ShortenURLRequest) returns (ShortenURLResponse);
  rpc ShortenURLs(ShortenURLsRequest) returns (ShortenURLsResponse);
  rpc ResolveURL(ResolveURLRequest) returns (ResolveURLResponse);
}
